conclusions and acknowledgements draft

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -34,6 +34,7 @@
 \tableofcontents
 \listoffigures
 \listoftables
+\input{acknowledgements.tex}
 %\clearpage
 
 \mainmatter
@@ -46,6 +47,7 @@
 \input{analysis_8TeV_5p1fb.tex}
 \input{analysis_8TeV_19p4fb.tex}
 \input{analysis_improvements.tex}
+\input{conclusions_and_summary.tex}
 
 \bibliographystyle{lucas_unsrt}
 \bibliography{dissertation}
