updated statistics methods section

--- a/dissertation.bib
+++ b/dissertation.bib
@@ -1423,6 +1423,17 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       year          = "2011",
 }
 
+@article{Conway:2011in,
+      author         = "Conway, J.S.",
+      title          = "{Incorporating Nuisance Parameters in Likelihoods for
+                        Multisource Spectra}",
+      year           = "2011",
+      eprint         = "1103.0354",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.data-an",
+      SLACcitation   = "%%CITATION = ARXIV:1103.0354;%%",
+}
+
 @article{Cowan:2010js,
       author         = "Cowan, Glen and Cranmer, Kyle and Gross, Eilam and
                         Vitells, Ofer",
