spelling and citations

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -4,13 +4,13 @@
 \par First and foremost, the analysis described in this dissertation
 would be impossible without the thousands of individuals that have
 contributed to the design, construction, and commissioning of the
-Large Hadron Collider (LHC) and Compact Muon Solendoid (CMS)
+Large Hadron Collider (LHC) and Compact Muon Solenoid (CMS)
 experiment.  The countless years of passion and dedication that have
 been poured into these machines have resulted in the most
 sophisticated tools ever available to mankind to explore the frontiers
 of high energy physics.  I am extremely grateful for the opportunity
 to participate in this collaboration and to contribute to the
-undertanding of physics at the \TeV energy scale.  
+understanding of physics at the \TeV energy scale.  
 
 \par I would like to thank Mike Arenton, Dave Cockerill and Alexander
 Ledovskoy for their tutelage and mentorship in regards to my studies
@@ -19,7 +19,7 @@ critical to improving my understanding of electronics, firmware, and
 signal analysis, and has been both a challenging and exciting
 experience.  I would also like to thank Thomas Anderson, Brian
 Franchise, Joseph Goodell, Al Tobias, and Evan Wolfe for all of their help in
-maintiaining the 4 T magnet and ensuring the VPT rig has survived long
+maintaining the 4 T magnet and ensuring the VPT rig has survived long
 enough to collect and analyze the data on these devices.  I woud also
 like to thank Professors Brad Cox and Bob Hirosky of the CMS research
 group here at UVa for always challenging me to improve the VPT rig and
@@ -61,10 +61,10 @@ a scientist and still manages to maintain a caring, well-grounded
 personality with a great sense of humor, even during the most daunting
 and stressful of situations.    
 
-\par These ackowledgements would be incomplete without mention of
+\par These acknowledgements would be incomplete without mention of
 Professor Chris Neu, who hooked me on studying particle physics at CMS
 during our first conversation together.  Since then, I have had the
-priviledge of being his student for the past six years.  It has been
+privilege of being his student for the past six years.  It has been
 an incredibly rewarding experience.  Under his guidance, I have
 travelled around the world, analyzed and unblinded a
 historically significant dataset in the field of particle physics, and
@@ -82,6 +82,6 @@ thank for you encouraging me to follow my dreams and giving me every
 opportunity to do the things I love.     
 
 \par To the love of my life, Whitney Wegman, you have been the most
-incredible source of inspiration and hapiness for me throughout the
+incredible source of inspiration and happiness for me throughout the
 three and a half years we have been together at this point.  I cannot
 have done this without all of your love and support.  
