spelling and citations

--- a/signatures.tex
+++ b/signatures.tex
@@ -10,16 +10,22 @@
     \vskip 0.35in 
     \hbox{\null\hskip 3.9in Date of Signature}
     \signrule
-    \raggedright\begin{tabular}{l}Supervisor: Dr. Christopher Neu\end{tabular}\par
+    \raggedright\begin{tabular}{l}Supervisor: Prof. Christopher Neu\end{tabular}\par
     \vskip -0.2in
     \signrule
-    \raggedright\begin{tabular}{l}Committee Chair: Dr. Bradley Cox\end{tabular}\par
+    \raggedright\begin{tabular}{l}Committee Member: Prof. Hank Thacker\end{tabular}\par
     \vskip -0.2in
     \signrule
-    \raggedright\begin{tabular}{l}Committee Member: Dr. Hank Thacker\end{tabular}\par
+    \raggedright\begin{tabular}{l}Committee Member: Prof. Edward Murphy\end{tabular}\par
+    \vskip -0.2in
+    \signrule
+    \raggedright\begin{tabular}{l}Committee Member: Prof. Bradley Cox\end{tabular}\par
+    %\raggedright\begin{tabular}{l}Committee Member: Prof. Bradley Cox\end{tabular}\par
     \vskip 0.75in
     \signrule
-    \raggedright\begin{tabular}{l}PhD Committee Chair: Dr. Astronomy Person\end{tabular}\par
+    %\raggedright\begin{tabular}{l}PhD Committee Chair: Prof. Bradley Cox\end{tabular}\par
+    \raggedright\begin{tabular}{l}PhD Committee Chair: Prof. Craig Group\end{tabular}\par
+    
   \end{singlespace}
 } 
 \newpage
