spelling and citations

--- a/dissertation.bib
+++ b/dissertation.bib
@@ -37,12 +37,27 @@
       note           = "URL~\url{https://twiki.cern.ch/twiki/bin/view/AtlasPublic/HiggsPublicResults}",
 }
 
+@misc{CMS:HZZ_4L_Twiki,
+      title          = "Image, CMS Higgs Physics Results, H->ZZ->4l Inv. Mass",
+      note           = "URL~\url{https://twiki.cern.ch/twiki/pub/CMSPublic/Hig13002PubTWiki/ZZMass_7Plus8TeV_70-1000_3GeV.pdf}",
+}
+
+@misc{CMS:HGG_Twiki,
+      title          = "Image, CMS Higgs Physics Results, H->GammaGamma Inv. Mass",
+      note           = "URL~\url{https://twiki.cern.ch/twiki/pub/CMSPublic/Hig13001PubTWiki/Fig_19.pdf}",
+}
+
 @book{Peskin_Schroeder,
       author         = "Michael E. Peskin and Daniel V. Schroeder",
       title          = "An Introduction to Quantum Field Theory",
       publisher      = "Westview Press",
       year           = "1995",
       address        = "URL~\url{http://www.westviewpress.com}",
+}
+
+@misc{th:HiggsPotential,
+      title          = "Image, Higgs Potential",
+      note           = "URL~\url{http://inspirehep.net/record/1086544/files/higgspotential.png}",
 }
 
 @article{th:Wilson_renormalization1,
@@ -325,6 +340,11 @@ url = "http://www.sciencedirect.com/science/article/pii/037026938390744X",
 author = "P. Bagnaia and M. Banner and R. Battiston and Ph. Bloch and F. Bonaudi and K. Borer and M. Borghini and J.-C. Chollet and A.G. Clark and C. Conta and P. Darriulat and L. Di Lella and J. Dines-Hansen and P.A. Dorsaz and L. Fayard and M. Fraternali and D. Froidevaux and G. Fumagalli and J.-M. Gaillard and O. Gildemeister and V.G. Goggi and H. Grote and B. Hahn and H. Hänni and J.R. Hansen and P. Hansen and T. Himel and V. Hungerbühler and P. Jenni and O. Kofoed-Hansen and E. Lançon and M. Livan and S. Loucatos and B. Madsen and P. Mani and B. Mansoulié and G.C. Mantovani and L. Mapelli and B. Merkel and M. Mermikides and R. Møllerud and B. Nilsson and C. Onions and G. Parrour and F. Pastore and H. Plothow-Besch and M. Polverel and J.-P. Repellin and A. Rimoldi and A. Rothenberg and A. Roussarie and G. Sauvage and J. Schacher and J.L. Siegrist and H.M. Steiner and G. Stimpfl and F. Stocker and J. Teiger and V. Vercesi and A.R. Weidberg and H. Zaccone and J.A. Zakrzewski and W. Zeller"
 }
 
+@misc{ex:LEP_Z-Pole_image,
+      title          = "Image, LEP ZPole",
+      note           = "URL~\url{http://lepewwg.web.cern.ch/LEPEWWG/1/Nnu.eps}",
+}
+
 @Article{ex:LEP_Z-Pole,
 author ="{The ALEPH, DELPHI, L3, OPAL, SLD Collaborations,
 the LEP Electroweak Working Group,
@@ -337,6 +357,8 @@ pages = "257",
 eprint = "hep-ex/0509008",
 SLACcitation = "%%CITATION = HEP-EX 0509008;%%"
 }
+
+
 
 @Article{ex:LEP-2_W,
 author = "{The ALEPH, DELPHI, L3, OPAL Collaborations, the LEP Electroweak Working Group}",
@@ -381,6 +403,24 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
   doi = {10.1103/PhysRevLett.74.2422},
   url = {http://link.aps.org/doi/10.1103/PhysRevLett.74.2422}
 }
+
+
+@misc{ex:CDF_Top_Mass_image,
+      title          = "Image, CDF Top Quark Mass",
+      note           = "URL~\url{http://www-cdf.fnal.gov/physics/new/top/public_mass.html}",
+}
+
+@misc{ex:CMS_Higgs_Mass_image,
+      title          = "Image, CMS Higgs Mass",
+      note           = "URL~\url{http://cms-higgs-results.web.cern.ch/cms-higgs-results/Comb/HIG-14-009-Paper/sqr_mass_all.pdf}",
+}
+
+
+@misc{ex:CMS_SMP_image,
+      title          = "Image, CMS Standard Model Processes",
+      note           = "URL~\url{https://twiki.cern.ch/twiki/bin/view/CMSPublic/PhysicsResultsSMP}",
+}
+
 
 @article{th:HiggsXS_2013,
       author         = "Heinemeyer, S and others",
@@ -643,6 +683,12 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       SLACcitation   = "%%CITATION = HEP-EX/0607088;%%",
 }
 
+
+@misc{ex:Hierarchy_image,
+      title          = "Image, Hierarchy Problem",
+      note           = "URL~\url{http://upload.wikimedia.org/wikipedia/commons/thumb/6/68/Hqmc-vector.svg/300px-Hqmc-vector.svg.png}",
+}
+
 @article{Martin_SUSY_primer,
       author         = "Martin, Stephen P.",
       title          = "{A Supersymmetry primer}",
@@ -799,6 +845,12 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       note           = "URL~\url{http://www.coepp.org.au/files/coepp/images/cern-aerial2.jpg}",
 }
 
+@misc{LHC:Lumi_delivered,
+      title          = "LHC, Delivered Luminosity",
+      note           = "URL~\url{http://cms-service-lumi.web.cern.ch/cms-service-lumi/publicplots/int_lumi_cumulative_pp_2.png}",
+}
+
+
 @book{LHC:TDR_Vol1_MainRing_Brüning,
       author        = "Brüning, Oliver Sim and Collier, Paul and Lebrun, P and
                        Myers, Stephen and Ostojic, Ranko and Poole, John and
@@ -842,6 +894,17 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       primaryClass   = "physics.acc-ph",
       reportNumber   = "LINAC2000-TUD17",
       SLACcitation   = "%%CITATION = PHYSICS/0008102;%%",
+}
+
+@unpublished{Jean-Luc:841568,
+      author        = "Jean-Luc Caron",
+      title         = "{The LHC injection complex.. L'ensemble d'injection du
+                       LHC.}",
+      month         = "May",
+      year          = "1993",
+      reportNumber  = "LHC-PHO-1993-008",
+      url           = "https://cds.cern.ch/record/841568",
+      note          = "AC Collection. Legacy of AC. Pictures from 1992 to 2002.",
 }
 
 @misc{LHC:LHC_linac2_duoplasmatron_schematic,
@@ -938,6 +1001,7 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       note         = "URL~\url{http://home.web.cern.ch/sites/home.web.cern.ch/files/styles/medium/public/image/accelerator/2013/01/accelerators-ps.jpg?itok=5E3Tp4Q0}",
 }
 
+
 @techreport{LHC:RF_Systems_of_CERN_Valuch,
       author        = "Valuch, D",
       title         = "{Radio frequency systems of the CERN synchrotron accelerators}",
@@ -1020,6 +1084,16 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       SLACcitation   = "%%CITATION = ECONF,C04100411,046;%%",
 }
 
+@misc{LHC:LHC_lhc_dipole_dual_bore_image,
+      title        = "Image, CERN LHC, Dipole Magnet, Dual Bore",
+      note         = "URL~\url{http://lhc-machine-outreach.web.cern.ch/lhc-machine-outreach/components/magnets_files/image002.jpg}",
+}
+
+@misc{LHC:LHC_lhc_dipole_field_image,
+      title        = "Image, CERN LHC, Dipole Magnet, field",
+      note         = "URL~\url{http://lhc-machine-outreach.web.cern.ch/lhc-machine-outreach/images/dipole-field.gif}",
+}
+
 @misc{LHC:LHC_lhc_dipole_image,
       title        = "Image, CERN LHC, Dipole Magnet, Staging Area",
       note         = "URL~\url{https://cds.cern.ch/record/994212/files/transp-2001-001_05.jpg?subformat=icon-1440}",
@@ -1074,10 +1148,22 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
       note         = "URL~\url{http://www.lhc-closer.es/img/subidas/4_7_2_2.jpg}",
 }
 
+@misc{LHC:LHC_klyston_basic,
+      title        = "Image, Klystron operations",
+      note         = "URL~\url{http://upload.wikimedia.org/wikipedia/commons/a/aa/Klystron.enp.gif}",
+}
+
+@misc{LHC:LHC_klyston_installed,
+      title        = "Image, Klystron operations",
+      note         = "URL~\url{http://cds.cern.ch/record/43017?ln=en}",
+}
+
+
 @misc{LHC:LHC_lhc_cryogen_cernWebsite,
       title        = "Outreach, CERN LHC, Cryogenic System",
       note         = "URL~\url{http://home.web.cern.ch/about/engineering/cryogenics-low-temperatures-high-performance}",
 }
+
 
 @article{LHC:LHC_cool_challenge,
       title         = "{The challenge of keeping cool}",
